--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ac-rust-lambda"
 version = "0.1.0"
-authors = ["rfreitas <rfreitas@squaretrade.com>"]
+authors = ["rfreitas <renato.freitas@avenuecode.com>"]
 edition = "2018"
 
 [dependencies]
